--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -124,7 +124,7 @@
               </div>
   
               <!--Forgot password link-->
-              <a href="fogotPassword" class="text-white">Forgot password?</a>
+              <a href="forgotPassword" class="text-white">Forgot password?</a>
             </div>
   
             <!-- Login button -->
